// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormViewToggler component should render default view 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Switch to tabbed mode"
    >
      <WithStyles(ForwardRef(Switch))
        checked={false}
        color="primary"
        value="tabbed"
      />
    </WithStyles(ForwardRef(Tooltip))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`FormViewToggler component should render tooltip for full form 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="row"
  spacing={0}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Switch to full form mode"
    >
      <WithStyles(ForwardRef(Switch))
        checked={true}
        color="primary"
        value="tabbed"
      />
    </WithStyles(ForwardRef(Tooltip))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
